syntax = "proto3";

option java_package = "spring";


service Spring {
  rpc getZodiacSign (ZodiacRequest) returns (ZodiacResponse) {}
}

message ZodiacRequest {
  string month = 1;
  string day = 2;
  string year = 3;
}

message ZodiacResponse {
  string zodiac_sign = 1;
}